# HammerTime

./: .gitignore  README.md  procurement_order.json  pyproject.toml
Frontend/: app.py  components.py  config.py  styles.py  utils.py
Frontend/.streamlit/: config.toml
Frontend/assets/: splash_template.html
Frontend/views/: __init__.py  dashboard.py  image_search.py  orders.py  reports.py  voice_request.py
backend/: main.py  pdf_generator.py
backend/utils/: request_agent.py
comstruct_agentic_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
